--- a/src/main/resources/templates/showExamUser.html
+++ b/src/main/resources/templates/showExamUser.html
@@ -51,7 +51,11 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-    fetch("http://localhost:8083/exams/get-exam")
+
+    let params = new URLSearchParams(window.location.search)
+    let userId = params.get("userId");
+
+    fetch("http://localhost:8083/exams/get-exam?userId="+userId)
         .then(res => res.json())
         .then(res => {
             for (let i = 0; i < res.length; i++) {
