show score for user

--- a/src/main/resources/templates/showExamUser.html
+++ b/src/main/resources/templates/showExamUser.html
@@ -72,7 +72,7 @@
             row.innerHTML = `
             <td >${res[i].examName}</td>
             <td>${res[i].creationDate}</td>
-            <td>20</td>
+            <td>${res[i].score}</td>
             <td><a class="btn btn-success">نمایش سوالات جواب داده شده</a></td>
             `;
             tbody.appendChild(row);
