--- a/src/main/resources/templates/showExamUser.html
+++ b/src/main/resources/templates/showExamUser.html
@@ -71,7 +71,7 @@
             row.setAttribute("data-id", res[i].id);
             row.innerHTML = `
             <td >${res[i].examName}</td>
-            <td>${res[i].creationDate}</td>
+            <td>${new Date(res[i].creationDate).toLocaleDateString('fa-IR')}</td>
             <td>${res[i].score}</td>
             <td><a href="http://localhost:8083/showAnswerer?examId=${res[i].examId}&userExamId=${res[i].userExamId}" class="btn btn-success">نمایش سوالات جواب داده شده</a></td>
             `;
